--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "Mateus Gomes da Silva Cardoso",
   "license": "ISC",
   "dependencies": {
+    "@types/passport": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.10.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.16"
